--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,5 +1,5 @@
   <div class="modal-body text-center">
     <p>Confirm action?</p>
-    <button type="button" class="btn btn-default" (click)="decline()" >No</button>
-    <button type="button" class="btn btn-primary" (click)="confirm()" >Yes</button>
+    <button type="button" class="ml-btn btn-default" (click)="decline()" >No</button>
+    <button type="button" class="ml-btn btn-primary" (click)="confirm()" >Yes</button>
   </div>
