--- a/src/scss/components/_list-group.scss
+++ b/src/scss/components/_list-group.scss
@@ -1,21 +1,46 @@
-.list-group-item-flex {
+.ml-list-group {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.ml-list-group-item-flex {
     display: flex;
     padding-left: .5rem;
     padding-right: .5rem;
 }
 
-.list-group-item {
-    padding: 6.5px 0;
-    align-items: flex-start !important;
-    background: 0;
-    border-left: 0;
-    border-right: 0;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 20px;
-    padding: 10px 0;
+// .list-group-item {
+//     padding: 6.5px 0;
+//     align-items: flex-start !important;
+//     background: 0;
+//     border-left: 0;
+//     border-right: 0;
+//     font-size: 13px;
+//     font-weight: 400;
+//     line-height: 20px;
+//     padding: 10px 0;
+// }
+
+.ml-list-group-item {
+    // position: relative;
+    // display: block;
+    // padding: .75rem 1.25rem;
+    // margin-bottom: -1px;
+    // background-color: $white;
+    // border: 1px solid rgba(0,0,0,.125);
+
+    position: relative;
+    display: block;
+    padding: 10px 5px;
+    margin-bottom: -1px;
+    background-color: transparent;
+    border: 1px solid hsla(0,0%,86.3%,.5);
 }
 
-.list-group-item-flex .ml-col .ml-sticker:only-child {
+.ml-list-group-item-flex .ml-col .ml-sticker:only-child {
     margin-top: .0625rem;
 }
