--- a/src/app/link-edit/link-edit.component.html
+++ b/src/app/link-edit/link-edit.component.html
@@ -1,90 +1,114 @@
-<form class="editLinkForm">
-
-  <div class="modal-header">
-
-    <div class="modal-title">
-      <div *ngIf="linkData.linkType === 'External'">Update Link</div>
-      <div *ngIf="linkData.linkType === 'Ikon'">Customise Ikon content link</div>
-    </div>
-
-    <button type="button" class="close pull-right" aria-label="Close" (click)="hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-
+<div class="ml-modal-header">
+  <div class="modal-title">
+    <div *ngIf="linkData.linkType === 'External'">Update Link</div>
+    <div *ngIf="linkData.linkType === 'Ikon'">Customise Ikon content link</div>
   </div>
+  <button type="button" class="close-modal" aria-label="Close" (click)="bsModalRef.hide()">
+    <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
+      <use attr.xlink:href="{{ASSETURL + '/icons.svg#navigation-close' }}" />
+    </svg>
+  </button>
+</div>
 
-  <div class="modal-body">
+<!-- BEGIN: TEMPLATE FORM -->
+<form id="editLinkForm" class="needs-validation" novalidate>
 
-    <form id="editLinkForm" class="needs-validation" novalidate>
+  <!-- BEGIN: MODAL BODY -->
+  <div class="ml-modal-body">
 
-      <label for="mlType" class="invisible">Link Type</label>
-      <input type="hidden" id="mlType" class="form-control" name="mlType">
+    <!-- BEGIN: DEV JSON OUTPUT -->
+    <!-- <p class="text-danger">{{ linkDetails | json }}</p> -->
+    <!-- END: DEV JSON OUTPUT -->
 
-      <div *ngIf="linkData.linkType === 'External'">
+    <!-- BEGIN: HIDDEN LINKTYPE -->
+    <label for="mlType" class="invisible">Link Type</label>
+    <input type="hidden" id="mlType" class="ml-form-control" name="mlType">
+    <!-- END: HIDDEN LINKTYPE -->
 
+    <!-- BEGIN: IF Type == External -->
+    <div *ngIf="linkData.linkType === 'External'">
+
+      <!-- BEGIN: TITLE -->
+      <div class="form-group">
         <div class="form-row">
-
-          <div class="form-group col-7">
+          <div class="col-8">
             <label for="mlTitle" class="mlLabel">Link Title<span>*</span></label>
-            <input  type="text" id="mlTitle" [(ngModel)]="linkData.title" 
-                    class="form-control" name="mlTitle" 
-                    placeholder="e.g. Google search" required>
+            <input type="text" id="mlTitle" [(ngModel)]="linkData.title" class="ml-form-control" name="mlTitle"
+              placeholder="e.g. Google search" minlength="3" appForbiddenName="title" required>
           </div>
-
         </div>
-
-        <div class="form-row">
-
-          <div class="form-group col-7">
-            <label for="mlUrl" class="mlLabel">Web address<span>*</span></label>
-            <input  type="text" id="mlUrl" [(ngModel)]="linkData.url" 
-                    name="mlUrl" class="form-control" 
-                    placeholder="e.g. https://google.com" required>
-          </div>
-          <div class="form-group col-3">
-            <button type="button" class="btn btn-link" placement="right" tooltip="Please enter the full URL. (including protocol ie: http, https, ftp)">
-              <svg class="ml-icon ml-icon-information-outline" focusable="false" role="presentation">
-                  <use href="/assets/icons.svg#information-outline" />
-                </svg>
-            </button>
-          </div>
-
-        </div>
-
       </div>
+      <!-- END: TITLE -->
 
-      <div *ngIf="linkData.linkType === 'Ikon'">
-
+      <!-- BEGIN: URL -->
+      <div class="form-group">
         <div class="form-row">
-          <div class="form-group col-7">
-            <label for="mlUUid" class="mlLabel">Service's published title</label><br />
-            <a id="mlUUid" href="{{ linkData.linkUUid }}">{{ linkData.title }}</a>
+          <div class="col-8">
+            <label for="mlUrl" class="mlLabel">Web address<span>*</span></label>
+            <input type="text" id="mlUrl" [(ngModel)]="linkData.url" name="mlUrl" class="ml-form-control"
+              placeholder="e.g. https://google.com" pattern="https?://.+" required>
           </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group col-7">
-            <label for="mlLinkTitle" class="mlLabel">Custom title</label>
-            <input type="text" id="mlLinkTitle" [(ngModel)]="linkData.linkTitle" name="mlLinkTitle" class="form-control" placeholder="e.g. My custom title">
-          </div>
-          <div class="form-group col-3">
-            <button type="button" class="btn btn-link btn-icon-info" placement="right" tooltip="You can customise the title for your saved Ikon links.">
+          <div class="col-2">
+            <button type="button" class="ml-btn btn-link btn-icon-info" placement="right"
+              tooltip="Please enter the full URL. (including protocol ie: http, https, ftp)">
               <svg class="ml-icon ml-icon-information-outline" focusable="false" role="presentation">
-                <use href="/assets/icons.svg#information-outline" />
+                <use attr.xlink:href="{{ASSETURL + '/icons.svg#information-outline' }}" />
               </svg>
             </button>
           </div>
         </div>
-
       </div>
+      <!-- END: URL -->
 
-    </form>
+    </div>
+    <!-- END: IF Type == External -->
+
+    <!-- BEGIN: IF Type == Ikon -->
+    <div *ngIf="linkData.linkType === 'Ikon'">
+
+      <!-- BEGIN: UUid  -->
+      <div class="form-group">
+        <div class="form-row">
+          <div class="col-8">
+            <label for="mlUUid" class="mlLabel">Service's published title</label><br />
+            <a id="mlUUid" href="{{ linkData.linkUUid }}">{{ linkData.title }}</a>
+          </div>
+        </div>
+      </div>
+      <!-- BEGIN: UUid  -->
+
+      <!-- BEGIN: LinkTitle  -->
+      <div class="form-group">
+        <div class="form-row">
+          <div class="col-8">
+            <label for="mlLinkTitle" class="mlLabel">Custom title</label>
+            <input type="text" id="mlLinkTitle" [(ngModel)]="linkData.linkTitle" name="mlLinkTitle" class="ml-form-control"
+              placeholder="e.g. My custom title">
+          </div>
+          <div class="col-2">
+            <button type="button" class="ml-btn btn-link btn-icon-info" placement="right"
+              tooltip="You can customise the title for your saved Ikon links.">
+              <svg class="ml-icon ml-icon-information-outline" focusable="false" role="presentation">
+                  <use attr.xlink:href="{{ASSETURL + '/icons.svg#information-outline' }}" />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- END: LinkTitle  -->
+
+    </div>
+    <!-- END: IF Type == Ikon -->
 
   </div>
+  <!-- END: MODAL BODY -->
 
-  <div class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="hide()">Close</button>
-	  <button type="submit" class="btn btn-primary" (click)="openModalWithComponent()">Update Link</button>
+  <!-- END: MODAL FOOTER -->
+  <div class="ml-modal-footer">
+    <button type="button" class="ml-btn btn-default" (click)="bsModalRef.hide()">Close</button>
+    <button type="submit" class="ml-btn btn-primary" (click)="openModalWithComponent()">Update Link</button>
   </div>
+  <!-- END: MODAL FOOTER -->
 
 </form>
+<!-- END: TEMPLATE FORM -->
