--- a/src/app/user-links/user-links.component.html
+++ b/src/app/user-links/user-links.component.html
@@ -1,18 +1,16 @@
 <!-- BEGIN: My Links Header -->
-<div class="card">
+<div class="ml-card">
   <!-- END: My Links Header -->
-  <div class="card-header text-white bg-secondary">
+  <div class="ml-card-header">
     <div class="ml-row">
       <div class="ml-col ml-col-expand">
         <div class="ml-section-title">My links</div>
       </div>
       <div class="ml-col">
-        <button type="button" class="btn-link btn-info"
-          (click)="isCollapsed = !isCollapsed"
-          [attr.aria-expanded]="!isCollapsed"
-          aria-controls="infoPanel">
+        <button type="button" class="btn-link btn-info" (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed" aria-controls="infoPanel">
           <svg class="ml-icon ml-icon-information-solid" focusable="false" role="presentation">
-            <use href="/assets/icons.svg#information-solid" />
+            <use attr.xlink:href="{{ASSETURL + '/icons.svg#information-solid' }}" />
           </svg>
           <span class="sr-only">Collapse Information</span>
         </button>
@@ -20,7 +18,7 @@
       <div *ngIf="Link.length !== 0" class="ml-col">
         <button type="button" class="btn-link btn-cog" (click)="toggleEditControls()">
           <svg class="ml-icon ml-icon-cog" focusable="false" role="presentation">
-            <use href="/assets/icons.svg#cog" />
+            <use attr.xlink:href="{{ASSETURL + '/icons.svg#cog' }}" />
           </svg>
           <span class="sr-only">Manage Links</span>
         </button>
@@ -30,54 +28,54 @@
   <!-- END: My Links Header -->
 
   <!-- BEGIN: My Links Info Panel -->
-  <div class="card-body collapse" id="infoPanel" [collapse]="linksAvailable()" #collapse="bs-collapse">
-    <button type="button" class="btn-link btn-close" (click)="isCollapsed = !isCollapsed" aria-controls="infoPanel" aria-label="Close">
+  <div class="ml-card-body collapse" id="infoPanel" [collapse]="linksAvailable()" #collapse="bs-collapse">
+    <button type="button" class="btn-link btn-close" (click)="isCollapsed = !isCollapsed" aria-controls="infoPanel"
+      aria-label="Close">
       <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
-        <use href="/assets/icons.svg#navigation-close" />
+        <use attr.xlink:href="{{ASSETURL + '/icons.svg#navigation-close' }}" />
       </svg>
     </button>
-    <div class="row info-panel">
-      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-1">
+    <div class="ml-info-panel">
+      <div class="ml-info-panel-icon">
         <div class="ml-info-circle">
           <svg class="ml-icon ml-icon-bookmark-solid" focusable="false" role="presentation">
-            <use href="/assets/icons.svg#bookmark-solid" />
+            <use attr.xlink:href="{{ASSETURL + '/icons.svg#bookmark-solid' }}" />
           </svg>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 add-link">
-        <div class="text-center text-sm-left">
-          <div *ngIf="Link.length !== 0">
-            <app-list-information class="card-info"></app-list-information>
-          </div>
-          <div *ngIf="Link.length === 0">
-            <button id="addLink" class="btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
-          </div>
+      <div class="ml-info-panel-content">
+        <div *ngIf="Link.length !== 0">
+          <app-list-information class="ml-card-info"></app-list-information>
+        </div>
+        <div *ngIf="Link.length === 0">
+          <button id="addLink" class="ml-btn btn-link" (click)="openCreateLinkModal()">Add your first item</button>
         </div>
       </div>
     </div>
   </div>
   <!-- END: My Links Info Panel -->
-  
+
   <!-- BEGIN: My Links List -->
-  <ul class="list-group list-group-flush">
-    
+  <ul class="ml-list-group ml-list-group-flush">
+
     <!-- BEGIN: My Link Item-->
-      <li *ngFor="let link of Link" class="list-group-item" id="linkItem-{{ link.id }}">
+    <li *ngFor="let link of Link" class="ml-list-group-item" id="linkItem-{{ link.id }}">
 
       <div class="ml-row">
-        <div class="ml-col"> 
+        <div class="ml-col">
           <ng-container *ngIf="!show">
             <button type="button" class="btn-link btn-arrow">
               <svg class="ml-icon ml-icon-arrow-chevron-thin-right" focusable="false" role="presentation">
-                <use href="/assets/icons.svg#arrow-chevron-thin-right" />
+                <use attr.xlink:href="{{ASSETURL + '/icons.svg#arrow-chevron-thin-right' }}" />
               </svg>
               <span class="sr-only">Arrow Icon</span>
             </button>
           </ng-container>
           <ng-container *ngIf="show">
-              <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link)" title="Delete Link" ng-show="editControls">
+            <button type="button" class="btn-link btn-delete" (click)="openDeleteLinkModal(link)" title="Delete Link"
+              ng-show="editControls">
               <svg class="ml-icon ml-icon-navigation-close" focusable="false" role="presentation">
-                <use href="/assets/icons.svg#navigation-close" />
+                <use attr.xlink:href="{{ASSETURL + '/icons.svg#navigation-close' }}" />
               </svg>
               <span class="sr-only">Delete Link</span>
             </button>
@@ -88,9 +86,9 @@
             <div *ngIf="link.linkType == 'External'">
               <a id="xlink-{{ link.id }}" title="{{ link.title }}" [href]="link.url" target="_blank">
                 <span>{{ link.title }}</span>
-                <span class='inline-item'>
-                  <svg aria-hidden='true' class='ml-icon ml-icon-external-link'>
-                    <use href='/assets/icons.svg#external-link'></use>
+                <span class="inline-item">
+                  <svg aria-hidden="true" class="ml-icon ml-icon-external-link">
+                    <use attr.xlink:href="{{ASSETURL + '/icons.svg#external-link' }}" />
                   </svg>
                 </span>
               </a>
@@ -109,7 +107,7 @@
           <div class="ml-col">
             <button type="button" class="btn-link" (click)="openEditLinkModal(link.id)">
               <svg class="ml-icon ml-icon-pencil" focusable="false" role="presentation">
-                <use href="/assets/icons.svg#pencil" />
+                <use attr.xlink:href="{{ASSETURL + '/icons.svg#pencil' }}" />
               </svg>
               <span class="sr-only">Edit Link</span>
             </button>
@@ -122,11 +120,11 @@
   <!-- END: My Links List -->
 
   <!-- BEGIN: My Links Footer -->
-  <div class="card-footer">
+  <div class="ml-card-footer">
     <div class="ml-add-item">
-      <button type="button" class="btn btn-link" (click)="openCreateLinkModal()">
+      <button type="button" class="ml-btn btn-footer-link" (click)="openCreateLinkModal()">
         <svg class="ml-icon ml-icon-navigation-plus" focusable="false" role="presentation">
-          <use href="/assets/icons.svg#navigation-plus" />
+          <use attr.xlink:href="{{ASSETURL + '/icons.svg#navigation-plus' }}" />
         </svg>
         <span>Add link item</span>
       </button>
@@ -135,3 +133,5 @@
   <!-- END: My Links Footer -->
 
 </div>
+<small class="sr-only">last updated: {{ now }}</small>
+<small class="sr-only">path: {{ASSETURL}}</small>
