--- a/src/scss/components/_mylinks.scss
+++ b/src/scss/components/_mylinks.scss
@@ -89,11 +89,19 @@
 }
 
 .ml-section-title {
-  padding-left:   15px;
+  // padding-left:   15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 13px;
-  letter-spacing: 1.5px;
+  color: $white;
+  // letter-spacing: 1.5px;
+}
+
+.ml-info-heading {
+  font-size: 16px;
+}
+.ml-info-text {
+  font-size: 14px;
 }
 
 .ml-info-circle {
@@ -118,7 +126,7 @@
   border: 0;
   border: 1px dashed #D7D7D7;
   line-height: 1.429;
-  margin: 0 0 2px 0;
+  margin: 2px 0 2px 0;
   padding: 0;
   position: relative;
   text-align: -webkit-match-parent;
